--- a/src/AddToCart/AddToCart.module.css
+++ b/src/AddToCart/AddToCart.module.css
@@ -1,32 +1,4 @@
 .container {
     display: flex;
-    height: 60px;
-    margin-bottom: 20px;
-}
-
-.quantity {
-    padding-right: 5%;
-    min-width: 40%;
-} 
-
-.dropdown {
-    width: 100%;
-    color: #133A1B;
-    padding-right: 5%
-}
-
-.button {
-    background-color: #133A1B !important;
-    height: 40px !important;
-}
-
-.button:hover {
-    text-decoration: underline;
-    background-color: #133A1B;
-}
-
-@media only screen and (max-width: 402px) {
-    .button {
-        font-size: smaller;
-    }
+    justify-content: space-between;
 }
