--- a/src/common/Navbar.module.css
+++ b/src/common/Navbar.module.css
@@ -1,10 +1,12 @@
 .navlinks {
-    margin-left: 10px;
     display: flex;
+    justify-content: space-around;
+    flex-grow: 1;
 }
 
 .toolbar {
-    background-color: #133A1B;
+    background-color: #9ca37c;
+    min-height: 30px !important;
 }
 
 .logo {
@@ -16,7 +18,6 @@
     text-decoration: none;
     color: white;
     font-size: 16px;
-    margin-left: 16px;
     display: flex;
     align-items: center;
 }
